Use application configuration & repository methodology

--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -5,6 +5,8 @@
         <div class="row">
             <div class="col-8">
                 <h1>Welcome</h1>
+                <p class="text-center text-secondary fs-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Adipisci architecto asperiores assumenda autem beatae consectetur debitis ea, error eum ex id illum impedit magnam neque optio perspiciatis reiciendis repellat saepe.</p>
             </div>
         </div>
     </div>
