Use template data

--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -8,6 +8,11 @@
                 <p class="text-center text-secondary fs-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Adipisci architecto asperiores assumenda autem beatae consectetur debitis ea, error eum ex id illum impedit magnam neque optio perspiciatis reiciendis repellat saepe.</p>
             </div>
+            <div class="col-2 bg-secondary h-auto">
+                <p class="text-center">
+                    {{index .StringMap "test"}}
+                </p>
+            </div>
         </div>
     </div>
 {{end}}
